# py42AI

./: addresses.csv  test.py
module00/ex00/: answers.txt  requirements.txt
module00/ex01/: exec.py
module00/ex02/: whois.py
module00/ex03/: count.py
module00/ex04/: operations.py
module00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
module00/ex06/: recipe.py
module00/ex07/: filterwords.py
module00/ex08/: sos.py
module00/ex09/: guess.py
module00/ex10/: loading.py
module01/ex00/: book.py  recipe.py  test.py
module01/ex01/: game.py
module01/ex02/: test.py  vector.py
module01/ex03/: matrix.py  test.py  vector.py
module01/ex04/: generator.py
module01/ex05/: eval.py
module01/ex06/: the_bank.py
module02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
module02/ex01/: main.py
module02/ex02/: logger.py
module02/ex03/: csvreader.py
module02/ex04/: setup.cfg  test.py  test_ft_progess.py  test_log.py
module02/ex04/ai42/: __init__.py  logging.py  progressbar.py
module02/ex04/src/ai42/logging/: log.py
module02/ex05/: TinyStatistician.py
module03/ex00/: NumPyCreator.py
module03/ex01/: ImageProcessor.py
module03/ex02/: ImageProcessor.py  ScrapBooker.py
module03/ex03/: ColorFilter.py  ImageProcessor.py
module03/ex04/: Kmeans.py  csvreader.py
