[metadata]
# replace with your username:
name = ai42
version = 1.0.0
author = isaadi
author_email = isaadi@student.1337.ma
description = 42 AI assignement
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sickl8/py42AI
project_urls =
    Bug Tracker = https://github.com/sickl8/py42AI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src